--- a/site/views/layouts/main.handlebars
+++ b/site/views/layouts/main.handlebars
@@ -1,32 +1,58 @@
 <!doctype html>
 <html>
+
 <head>
-    <title>Meadowlark Travel</title>
-    {{#if showTests}}
-      <link rel="stylesheet" href="/vendor/mocha.css">
-    {{/if}}
+  <title>Meadowlark Travel</title>
+  {{#if showTests}}
+    <link rel="stylesheet" href="/vendor/mocha.css">
+  {{/if}}
+  {{{_sections.head}}}
 </head>
 
 <body>
-	<header><img src="/img/logo.png" alt="Meadowlark Travel Logo"></header>
+  <header>
+    <img src="/img/logo.png" alt="Meadowlark Travel Logo">
+  </header>
+  <div class="container">
+    {{#if flash}}
+      <div class="alert alert-dismissible alert-{{flash.type}}">
+        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+        <strong>{{flash.intro}}</strong> {{{flash.message}}}
+      </div>
+    {{/if}}
+
     {{{body}}}
 
-    	<script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
-    	<script>window.jQuery || document.write('<script src="/vendor/js/jquery-2.1.1.min.js"><\/script>')</script>
-    	{{{_sections.jquery}}}
-    {{#if showTests}}
-      <div id="mocha"></div>
-      <script src="/vendor/mocha.js"></script>
-      <script src="/vendor/chai.js"></script>
-      <script>
-        mocha.ui('tdd');
-        var assert = chai.assert;
-      </script>
-      <script src="/qa/tests-global.js"></script>
-      {{#if pageTestScript}}
-        <script src="{{pageTestScript}}"></script>
-      {{/if}}
-      <script>mocha.run();</script>
+    <hr>
+
+    <footer>
+      <p>&copy; Meadowlark Travel 2014</p>
+    </footer>
+  </div>
+  <!-- /container -->
+
+
+  <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script>
+    window.jQuery || document.write('<script src="/vendor/js/jquery-2.1.1.min.js"><\/script>')
+  </script>
+  {{{_sections.jquery}}}
+  {{#if showTests}}
+    <div id="mocha"></div>
+    <script src="/vendor/mocha.js"></script>
+    <script src="/vendor/chai.js"></script>
+    <script>
+      mocha.ui('tdd');
+      var assert = chai.assert;
+    </script>
+    <script src="/qa/tests-global.js"></script>
+    {{#if pageTestScript}}
+      <script src="{{pageTestScript}}"></script>
     {{/if}}
+    <script>
+      mocha.run();
+    </script>
+  {{/if}}
 </body>
+
 </html>
